# ethical-android-mvp

./: .coveragerc  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  BIBLIOGRAPHY.md  CHANGELOG.md  CHANGELOG_ours.md  CHANGELOG_theirs.md  CLAUDE_REQUEST_HEMISPHERE_REFACTOR.md  COLLABORATIVE_BRANCHES.md  CONTEXT.md  CONTRIBUTING.md  COPILOT_REQUEST_HEMISPHERE_REFACTOR.md  CURSOR_REQUEST_HEMISPHERE_REFACTOR.md  Dockerfile  Dockerfile.gpu  HISTORY.md  INTEGRATION_PULSE_ANALYSIS_2026_04_16.md  LICENSE  LICENSING_STRATEGY.md  ONBOARDING.md  PROPOSAL_CLAUDE_HEMISPHERE_CRITIQUE.md  PROPOSAL_COPILOT_HEMISPHERE_CRITIQUE.md  PROPOSAL_HEMISPHERE_LOBE_COUNT_DISCUSSION.md  README.md  README_HTTPS.md  SAFETY_CARD.md  SECURITY.md  TRADEMARK.md  _run_pytest_capture.py  ai.txt  audit_trail.db  check_tri_lobe.py  dashboard.html  debug_output.txt  debug_script.txt  docker-compose.gpu.yml  (+23 more)
.certs/: cert.pem  key.pem  nomad-dev-cert.pem  nomad-dev-key.pem
.chroma_test/: chroma.sqlite3
.cursor/rules/: 02-autonomous-git.mdc  agile-collaboration-and-promotion.mdc  architecture.mdc  code-quality.mdc  collaboration-prioritization.mdc  collaboration-rule-authority.mdc  dev-efficiency-and-docs.mdc  l1-supremacy-and-audit.mdc  team-task-synchronization.mdc  tri-lobe-implementation-standard.mdc  workflow.mdc
.cursor/rules_v1_backup/: cross-team-conflict-prevention.mdc  dev-efficiency-and-docs.mdc  l1-supremacy-and-audit.mdc  repo-language-policy.mdc  team-task-synchronization.mdc  tri-lobe-implementation-standard.mdc
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  collaboration.yml  config.yml  external_validation.yml  question.yml
.github/workflows/: ci.yml  copilot-setup-steps.yml  gate-maintenance.yml  landing-ci.yml  wiki-sync.yml  wiki_sync.yml
artifacts/: optuna_malabs_thresholds.db
artifacts/merge_conflicts_20260415-210405/: git_status.txt
config/: swarm_cache.json
contracts/: EthicalAppeal.sol  EthosToken.sol  README.md  Treasury.sol
data/: narrative.db
docs/: ADR_0016_COMPLETION_STATUS.md  ADR_0016_FINAL_STATUS.md  ADR_0017_IMPLEMENTATION.md  ARCHITECTURE_NOMAD_V3.md  BRANCH_AUDIT_REPORT.md  CONTINUAL_LEARNING_WITH_CONSTRAINTS.md  CONTRIBUTING.md  CORE_DECISION_CHAIN.md  CRITIQUE_ROADMAP_ISSUES.md  DEMO_SITUATED_V8.md  EMPIRICAL_PILOT_PROTOCOL.md  ENV_VAR_CATALOG.md  EPOCH_INDEX.md  ESTRATEGIA_Y_RUTA.md  ETHICAL_TIER_MAP.md  ETHOS_2_PLAN_OPERATIVO.md  EXPERIMENTAL_CONSCIOUSNESS_AND_AFFECT_ARCHETYPES.md  GOVERNANCE_MOCKDAO_AND_L0.md  IDE_ANDROID_STUDIO_HANDOFF.md  INDEX.md  INPUT_TRUST_THREAT_MODEL.md  KERNEL_ENV_POLICY.md  LICENSING_OVERVIEW.md  LIGHTHOUSE_KB.md  LLM_STACK_OLLAMA_VS_HF.md  LOCAL_PC_AND_MOBILE_LAN.md  NOMAD_PC_SMARTPHONE_BRIDGE.md  OPERATOR_QUICK_REF.md  OUT_OF_SPEC.md  PHASE_3_EVALUATION_PIPELINES.md  POLES_WEAKNESS_PAD_AND_PROFILES.md  PRODUCTION_HARDENING_ROADMAP.md  PROJECT_STATUS_AND_MODULE_MATURITY.md  PYDANTIC_SETTINGS_MIGRATION_GUIDE.md  REDUNDANT_MODULES_AND_CONSOLIDATION.md  REPOSITORY_LAYOUT.md  REPOSITORY_PERMISSIONS_CHECKLIST.md  REPOSITORY_SECURITY_HARDENING.md  ROADMAP_PRACTICAL_PHASES.md  RUNTIME_CONTRACT.md  (+18 more)
ethical-android-mvp-feature-antigravity-dellware-harden-primitive-modules/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  HISTORY.md  README.md  detect-secrets.baseline  docker-compose.metrics.yml  docker-compose.yml  requirements.txt
experiments/: README.md
landing/: .gitignore  OLLAMA.md  README.md  next.config.ts  package-lock.json  package.json
runs/: audit_ledger.jsonl  pilot_one_test.json
scratch/: test_narrative.db
scripts/: audit_mixture_simplex_corners.py  build_bloque_34_4_ws_chat.py  build_windows_desktop_release.ps1  docker_entrypoint.sh  evaluate_semantic_thresholds.py  field_test.py  field_test_chat_integration.py  fleet_sync.py  gen_cert.py  gen_certs.py  generate_golden_manifest.py  generate_local_certs.py  generate_prosody_dataset.py  generate_secure_boot_manifest.py  pre_commit_check.py  report_semantic_zone_table.py  reseal_secure_boot.py  run_empirical_pilot.py  run_experiment_v4_full_kernel_100k.py  run_experiment_v5_sensitivity.py  run_feedback_posterior.py  run_likelihood_calibration.py  run_mass_kernel_study.py  run_simplex_decision_map.py  run_stochastic_sandbox.py  run_vision_pilot_validation.py  run_weight_sweep_batch.py  seal_manifest.py  serve_https.py  start_lan_server.ps1  swarm_sync.py  update_secure_boot_hashes.py  validate_anti_sycophancy.py
simulations/: README.md
src/: MANIFEST.json  __init__.py  chat_server.py  chat_settings.py  ethical_kernel_batch.py  ethos_cli.py  kernel.py  kernel_components.py  kernel_decision.py  kernel_legacy_v12.py  kernel_manifest.py  kernel_pipeline.py  kernel_utils.py  main.py  real_time_bridge.py  runtime_profiles.py
src/clients/nomad_android/app/src/main/cpp/: CMakeLists.txt  llama-jni.cpp
tests/: __init__.py  adversarial_inputs.py  conftest.py  stress_nervous_system.py  stress_thalamus_filtering.py  test_adr0002_async_validation.py  test_adr0018_presentation_tier.py  test_affect_relay.py  test_affective_homeostasis.py  test_antigravity_drive_mission.py  test_antigravity_hardening.py  test_antigravity_phase2.py  test_antigravity_phase3_expansion.py  test_antigravity_pruning.py  test_antigravity_sensor_missions.py  test_antigravity_strategic_interlock.py  test_antigravity_strategy.py  test_antigravity_swarm.py  test_api_http_hardening.py  test_audit_chain_hardening.py  test_audit_chain_log.py  test_audit_mixture_simplex_corners.py  test_bayesian_calibration_hardening.py  test_bayesian_context_valuations.py  test_bayesian_episodic_weights.py  test_bayesian_minimal_update.py  test_bayesian_persistence.py  test_bayesian_rlhf_c11.py  test_bloque_11_audio_ouroboros.py  test_bloque_12.py  test_bloque_13.py  test_bloque_14.py  test_bloque_20_local_fluency.py  test_bma_mixture_adr0012.py  test_buffer_lexical.py  test_cerebellum_biography.py  test_charm_engine.py  test_charm_engine_basal.py  test_charm_engine_rlhf.py  test_chat_async_llm_cancel.py  (+215 more)
(+1395 files in other folders)
