[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ethos-kernel"
# Semver placeholder: PyPI publication is not a near-term goal (research / reference impl; see README + ADR 0001).
version = "0.0.0"
description = "Ethos Kernel — research reference implementation of a moral decision core (editable install from Git; not published to PyPI)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["ethics", "moral-agent", "decision-core", "kernel", "malabs"]
dependencies = [
    "numpy>=2.0.0,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "jsonschema>=4.20.0,<5.0.0",
    "prometheus-client>=0.20.0,<1.0.0",
    "cryptography>=42.0.0,<47.0.0",
]

[project.scripts]
ethos = "src.ethos_cli:main"

# Base [project.dependencies] = policy-core wheels (MalAbs → Bayes → poles → will path). Same `src/` tree includes narrative/DAO/PAD; there is no import-time split yet.
# Extras: `runtime` = FastAPI chat server; `theater` = marker only (no extra deps) for "humanizing" layers — see README + CORE_DECISION_CHAIN.md § core vs theater.
[project.optional-dependencies]
runtime = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
]
# Document-only extra: same codebase; use when you want pip to record dependency on narrative/audit UX layers (PAD, weakness, MockDAO) explicitly.
theater = []
dev = [
    "pytest>=7.4.0,<10.0.0",
    "anthropic>=0.18.0",
    "ruff>=0.9.0,<0.10.0",
    "mypy>=1.11.0,<2.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "pre-commit>=4.0.0,<5.0.0",
    "detect-secrets>=1.5.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/CuevazaArt/ethical-android-mvp"
Documentation = "https://github.com/CuevazaArt/ethical-android-mvp/blob/main/docs/proposals/CORE_DECISION_CHAIN.md"

# Flat layout: package directory is literally `src/` (imports: `from src.kernel import ...`).
[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = true

[tool.setuptools.package-data]
"src.modules" = ["*.json"]
"src.persistence" = ["schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
exclude = [
    ".git",
    ".venv",
    "venv",
    "landing",
    ".claude",
    "build",
    "dist",
    "androide-etico-mvp-v2",
    "androide-etico-mvp-v3",
    "androide-etico-mvp-v4-llm",
    "androide-etico-mvp-v5-complete",
    "androide-etico-mvp",
    "EthosMVP",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "UP",
    "B",
]
ignore = [
    "E501",
    "B008",
    "B904",
    "B905",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
namespace_packages = true
mypy_path = "."
files = ["src"]
ignore_missing_imports = true
show_error_codes = true
warn_unused_ignores = false
strict_optional = true
# Legacy annotations use implicit Optional; tighten gradually (see ADR / follow-up PRs).
no_implicit_optional = false
disallow_untyped_defs = false
check_untyped_defs = false
