[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ethos-kernel"
# Semver placeholder: PyPI publication is not a near-term goal (research / reference impl; see README + ADR 0001).
version = "0.0.0"
description = "Ethos Kernel — research reference implementation of a moral decision core (editable install from Git; not published to PyPI)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["ethics", "moral-agent", "decision-core", "kernel", "malabs"]
dependencies = [
    "numpy>=1.24.0,<2.1.0",
    "pydantic>=2.0.0,<3.0.0",
    "jsonschema>=4.20.0,<5.0.0",
    "prometheus-client>=0.20.0,<1.0.0",
    "cryptography>=42.0.0,<47.0.0",
]

[project.scripts]
ethos = "src.ethos_cli:main"
# FastAPI WebSocket chat server — requires optional-dependencies `runtime` (pip install -e ".[runtime]").
# Same entry as `python -m src.chat_server` / uvicorn `src.chat_server:app`.
ethos-runtime = "src.chat_server:main"

# Base [project.dependencies] = policy-core wheels (MalAbs → Bayes → poles → will path). Same `src/` tree includes narrative/DAO/PAD; there is no import-time split yet.
# Extras: `runtime` = FastAPI chat server; `theater` = marker only (no extra deps) for "humanizing" layers — see README + CORE_DECISION_CHAIN.md § core vs theater.
[project.optional-dependencies]
runtime = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
]
# Heavy optional backends — not required for the core decision chain.
# Install with: pip install -e ".[ml]"  or  pip install -e ".[vectors]"
ml = [
    "torch>=2.0.0",
]
vectors = [
    "chromadb>=0.4.0,<1.0.0",
]
llm = [
    "anthropic>=0.18.0",
]
tuning = [
    "optuna>=3.0.0,<5.0.0",
]
# Convenience combo (explicit list — setuptools does not resolve self-referential extras reliably).
all-optional = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "torch>=2.0.0",
    "chromadb>=0.4.0,<1.0.0",
    "anthropic>=0.18.0",
    "optuna>=3.0.0,<5.0.0",
]
# Document-only extra: same codebase; use when you want pip to record dependency on narrative/audit UX layers (PAD, weakness, MockDAO) explicitly.
theater = []
dev = [
    "pytest>=7.4.0,<10.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "ruff>=0.9.0,<0.10.0",
    "mypy>=1.11.0,<2.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "pre-commit>=4.0.0,<5.0.0",
    "detect-secrets>=1.5.0,<2.0.0",
    "websockets>=14.0,<16.0",
]

[project.urls]
Homepage = "https://github.com/CuevazaArt/ethical-android-mvp"
Documentation = "https://github.com/CuevazaArt/ethical-android-mvp/blob/main/docs/proposals/CORE_DECISION_CHAIN.md"

# Flat layout: package directory is literally `src/` (imports: `from src.kernel import ...`).
[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = true

[tool.setuptools.package-data]
"src.modules" = ["*.json"]
"src.persistence" = ["schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --tb=short"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
exclude = [
    ".git",
    ".venv",
    "venv",
    ".claude",
    "build",
    "dist",
    # V13+ tri-lobe uses ``src/kernel.py``; this file remains as an archival reference (ADR 0018).
    "src/ethical_kernel_batch.py",
    "androide-etico-mvp-v2",
    "androide-etico-mvp-v3",
    "androide-etico-mvp-v4-llm",
    "androide-etico-mvp-v5-complete",
    "androide-etico-mvp",
    "EthosMVP",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "UP",
    "B",
]
ignore = [
    "E501",
    "E402",
    "B008",
    "B904",
    "B905",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
namespace_packages = true
mypy_path = "."
files = ["src"]
ignore_missing_imports = true
show_error_codes = true
warn_unused_ignores = false
strict_optional = true
# Legacy annotations use implicit Optional; tighten gradually (see ADR / follow-up PRs).
no_implicit_optional = false
disallow_untyped_defs = false
check_untyped_defs = false
# Post–V13 Tri-Lobe: many modules still reference a pre-split EthosKernel surface or legacy
# dataclass shapes. CI keeps mypy for import/syntax drift; tighten per-module under PLAN B.2.
disable_error_code = [
    "attr-defined",
    "union-attr",
    "arg-type",
    "call-arg",
    "var-annotated",
    "valid-type",
    "assignment",
    "operator",
]

[[tool.mypy.overrides]]
module = "src.ethical_kernel_batch"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.sandbox.*"
ignore_errors = true
